SB update to 2.7.7 + kodyfikator.json update due to new names